--- a/frontend/src/components/FoodItem/FoodItem.css
+++ b/frontend/src/components/FoodItem/FoodItem.css
@@ -10,11 +10,13 @@
   width: 100%;
   border-radius: 15px 15px 0px 0px;
 }
-.placeholder-food-item-img {
-  width: 100%;
+.placeholder-food-item {
+  width: 265.5px;
+  height: 206.5px;
   border-radius: 15px 15px 0px 0px;
-  background-color: aliceblue;
+  background-color: rgb(222, 153, 153);
 }
+
 .food-item-info {
   padding: 20px;
 }
